@@ -1,6 +1,6 @@
 % File src/library/base/man/Extract.Rd
 % Part of the R package, http://www.R-project.org
-% Copyright 1995-2010 R Core Development Team
+% Copyright 1995-2011 R Core Development Team
 % Distributed under GPL 2 or later
 
 \name{Extract}
@@ -12,6 +12,7 @@
 \alias{[.simple.list}
 \alias{[[}
 \alias{$}
+\alias{getElement}
 \alias{[<-}
 \alias{[[<-}
 \alias{$<-}
@@ -26,6 +27,7 @@ x[i, j, \dots , drop = TRUE]
 x[[i, exact = TRUE]]
 x[[i, j, \dots, exact = TRUE]]
 x$name
+getElement(object, name)
 
 x[i] <- value
 x[i, j, \dots] <- value
@@ -170,6 +172,10 @@ x$i <- value
   whereas \code{[[} does.  \code{x$name} is equivalent to
   \code{x[["name", exact = FALSE]]}.  Also, the partial matching
   behavior of \code{[[} can be controlled using the \code{exact} argument.
+
+  \code{getElement(x, name)} is a version of \code{x[[name, exact = TRUE]]}
+  which for formally classed (S4) objects returns \code{\link{slot}(x, name)},
+  hence providing access to even more general list-like objects.
 
   \code{[} and \code{[[} are sometimes applied to other recursive
   objects such as \link{call}s and \link{expression}s.  Pairlists are
